# readabook

./: .gitignore  README.md  test
services/data_service/: README.md  pyproject.toml
services/data_service/data_service/: main.py
services/data_service/data_service/daos/: base.py  firebase.py
services/data_service/data_service/routers/: storage.py
services/data_service/data_service/services/: storage.py
services/data_service/data_service/typings/: book_info.py
services/data_service/tests/: __init__.py  test_data_service.py
services/data_service/typings/firebase_admin/: __init__.pyi  _auth_client.pyi  _auth_providers.pyi  _auth_utils.pyi  _gapic_utils.pyi  _http_client.pyi  _messaging_encoder.pyi  _messaging_utils.pyi  _rfc3339.pyi  _sseclient.pyi  _token_gen.pyi  _user_identifier.pyi  _user_import.pyi  _user_mgt.pyi  _utils.pyi  auth.pyi  credentials.pyi  db.pyi  exceptions.pyi  firestore.pyi  instance_id.pyi  messaging.pyi  ml.pyi  project_management.pyi  storage.pyi  tenant_mgt.pyi
services/data_service/typings/google/api_core/: __init__.pyi  client_options.pyi  datetime_helpers.pyi  exceptions.pyi  iam.pyi  page_iterator.pyi  retry.pyi
services/data_service/typings/google/auth/: _cloud_sdk.pyi  _default.pyi  _helpers.pyi  _service_account_info.pyi  app_engine.pyi  aws.pyi  credentials.pyi  environment_vars.pyi  exceptions.pyi  (+5 more)
services/data_service/typings/starlette/: datastructures.pyi
services/text_service/: pyproject.toml
services/text_service/tests/: test_text_service.py
services/text_service/text_service/services/: nlp.py  nlp_base.py
(+88 files in other folders)
