[tool.poetry]
name = "data_service"
version = "0.1.0"
description = "Service for database access"
authors = ["Luca Galbusera <lucagalbu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
