[tool.poetry]
name = "text_service"
version = "0.1.0"
description = ""
authors = ["Luca Galbusera <lucagalbu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.2.1"
ru-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.2.0/ru_core_news_sm-3.2.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
